fix photo size if one + alignement owner info

--- a/app/assets/stylesheets/cats.scss
+++ b/app/assets/stylesheets/cats.scss
@@ -11,6 +11,7 @@ i.fas.fa-paw {
   ul {
     list-style: none;
     padding: 0 0;
+    text-transform: capitalize;
   }
 }
 .cat-photos {
@@ -29,6 +30,13 @@ i.fas.fa-paw {
 .main-photo {
   height: 40vh;
   width: 95%;
+  object-fit: cover;
+  margin-bottom: 3vh;
+}
+
+.only-photo {
+  height: 40vh;
+  width: 100%;
   object-fit: cover;
   margin-bottom: 3vh;
 }
@@ -56,7 +64,7 @@ i.fas.fa-paw {
 .owner-info {
   width: 80%;
   margin: 0 auto;
-  padding: 1rem 1rem;
+  padding: 0 1rem;
 }
 
 .booking-price {
